crates/pg_syntax/tests/snapshots/data/0021@1.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT concat_lower_or_upper(a => 'Hello', b => 'World', uppercase => true);"
---
SelectStmt@0..76
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..74
    FuncCall@7..74
      Ident@7..28 "concat_lower_or_upper"
      Ascii40@28..29 "("
      NamedArgExpr@29..41
        Ident@29..30 "a"
        Whitespace@30..31 " "
        EqualsGreater@31..33 "=>"
        Whitespace@33..34 " "
        AConst@34..41
          Sconst@34..41 "'Hello'"
      Ascii44@41..42 ","
      Whitespace@42..43 " "
      NamedArgExpr@43..55
        Ident@43..44 "b"
        Whitespace@44..45 " "
        EqualsGreater@45..47 "=>"
        Whitespace@47..48 " "
        AConst@48..55
          Sconst@48..55 "'World'"
      Ascii44@55..56 ","
      Whitespace@56..57 " "
      NamedArgExpr@57..74
        Ident@57..66 "uppercase"
        Whitespace@66..67 " "
        EqualsGreater@67..69 "=>"
        Whitespace@69..70 " "
        AConst@70..74
          TrueP@70..74 "true"
  Ascii41@74..75 ")"
  Ascii59@75..76 ";"

