crates/pg_syntax/tests/snapshots/data/0035@1.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select *,some_col from contact where id = '123 4 5';"
---
SelectStmt@0..52
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Ascii44@8..9 ","
  ResTarget@9..17
    ColumnRef@9..17
      Ident@9..17 "some_col"
  Whitespace@17..18 " "
  From@18..22 "from"
  Whitespace@22..23 " "
  RangeVar@23..30
    Ident@23..30 "contact"
  Whitespace@30..31 " "
  Where@31..36 "where"
  Whitespace@36..37 " "
  AExpr@37..51
    ColumnRef@37..39
      Ident@37..39 "id"
    Whitespace@39..40 " "
    Ascii61@40..41 "="
    Whitespace@41..42 " "
    AConst@42..51
      Sconst@42..51 "'123 4 5'"
  Ascii59@51..52 ";"

