crates/pg_syntax/tests/snapshots/data/0039@7.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE AGGREGATE custom_aggregate (float8 ORDER BY column1, column2) (sfunc = sfunc1, stype = stype1);"
---
DefineStmt@0..102
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Aggregate@7..16 "AGGREGATE"
  Whitespace@16..17 " "
  Ident@17..33 "custom_aggregate"
  Whitespace@33..34 " "
  Ascii40@34..35 "("
  List@35..67
    FunctionParameter@35..41
      TypeName@35..41
        Ident@35..41 "float8"
    Whitespace@41..42 " "
    Order@42..47 "ORDER"
    Whitespace@47..48 " "
    By@48..50 "BY"
    Whitespace@50..51 " "
    FunctionParameter@51..58
      TypeName@51..58
        Ident@51..58 "column1"
    Ascii44@58..59 ","
    Whitespace@59..60 " "
    FunctionParameter@60..67
      TypeName@60..67
        Ident@60..67 "column2"
  Ascii41@67..68 ")"
  Whitespace@68..69 " "
  Ascii40@69..70 "("
  DefElem@70..84
    Ident@70..75 "sfunc"
    Whitespace@75..76 " "
    Ascii61@76..77 "="
    Whitespace@77..78 " "
    TypeName@78..84
      Ident@78..84 "sfunc1"
  Ascii44@84..85 ","
  Whitespace@85..86 " "
  DefElem@86..100
    Ident@86..91 "stype"
    Whitespace@91..92 " "
    Ascii61@92..93 "="
    Whitespace@93..94 " "
    TypeName@94..100
      Ident@94..100 "stype1"
  Ascii41@100..101 ")"
  Ascii59@101..102 ";"

